<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".fragments.AboutFragment">

    <TextView
        android:id="@+id/about_credits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/penny_drop_created_by"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/about_quote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/about_quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingBottom="32dp"
        android:text="@string/penny_drop_description"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/about_credits" />

    <TextView
        android:id="@+id/about_icon_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_quote" />

    <ImageView
        android:id="@+id/about_coin_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/coin_icon"
        android:minHeight="52dp"
        android:src="@drawable/coin"
        app:layout_constraintEnd_toStartOf="@id/about_dice_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_icon_credits" />

    <ImageView
        android:id="@+id/about_dice_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/dice_icon"
        android:minHeight="52dp"
        android:src="@drawable/dice_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/about_coin_icon"
        app:layout_constraintTop_toBottomOf="@id/about_icon_credits" />

</androidx.constraintlayout.widget.ConstraintLayout>