<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context="com.example.pennydrop4.GameFragment">

        <TextView
            android:id="@+id/textCurrentPlayerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="Hazel"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@id/textCoinsLeft"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textCurrentPlayerCoinsLeft"
            tools:text="Michael" />

        <TextView
            android:id="@+id/textCurrentPlayerCoinsLeft"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="7"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/textCoinsLeft"
            app:layout_constraintStart_toStartOf="@id/textCoinsLeft"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10" />

        <TextView
            android:id="@+id/textCoinsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="coin(s) left"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCurrentPlayerCoinsLeft" />

        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCoinsLeft">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableEnd="@drawable/dice_6"
                android:padding="10dp"
                android:text="@string/roll" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or"
                android:textSize="25sp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableEnd="@drawable/baseline_arrow_forward_24"
                android:padding="10dp"
                android:text="@string/pass" />
        </LinearLayout>

        <TextView
            android:id="@+id/textCurrentTurnInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:scrollbars="vertical"
            android:text="This will contain info about the game."
            app:layout_constraintBottom_toTopOf="@id/textCurrentStandingsInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutButtons"
            tools:text="Michael rolled a 4.\nMichael rolled a 6!" />

        <TextView
            android:id="@+id/textCurrentStandingsInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_marginStart="16dp"
            app:layout_marginEnd="16dp"
            app:layout_marginBottom="16dp"
            android:text="This will containt the game's current standings."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textCurrentTurnInfo"
            tools:text="Current Scores:\t\nHazel: 4 coins\nMichael: 7 coins" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>